styles/prosilver/theme/common.css
/* ... */
.legend {
	border: 1px solid #FFF;
	display: inline-block;
	height: 10px;
	width: 10px;
}

/* General
--------------------------------------------- */
.postbody.full { width: 100%; }

/* ColorBox adjustments; primarily switching control buttons to top */
#cboxLoadedContent {
	margin-top: 28px;
	margin-bottom: 0 !important;
	text-align: left;
}

#cboxLoadedContent h3 {
	top: 0;
	width: 100%;
	position: absolute;
}

#cboxNext, #cboxPrevious, #cboxClose, #cboxTitle, #cboxCurrent {
	top: 0;
	bottom: auto !important;
}

#cboxCurrent {
	top: 5px;
}

.dialog-options {
	text-align: center;
}

.error {
	color: #BC2A4D;
}


fieldset dl:hover dt label.error {
	color: #BC2A4D;
}

textarea.elastic {
	min-height: 100px;
	max-height: 400px;
}

textarea.quickedit {
	font-size: 1.1em;
}

.text-content {
	white-space: pre-wrap;
}

.inline-attachment {
	white-space: normal;
}

.revisions dt.revision-information {
	width: 50% !important;
}

hr.solid {
	border-top: 1px solid #CCCCCC;
	margin: 10px 0;
}

.contrib-download:after, .contrib-quickview:after, .contrib-list-container .action-bar {
	clear: both;
	content: '';
	display: block;
}

